Point Density with overlapping volumes doesn't work on GPU #51805

Closed
opened 2017-06-14 10:56:48 +02:00 by Georg Kohl · 8 comments

System Information
Windows 10(64 bit)
AMD Radeon RX 470 4GB

Blender Version
2.78.5 with Hash f02e04f (latest daily build)

Short description of error
Very closely related to bug report #51791 (I reported that yesterday, this issue is already resolved and works in today's build, at least for Volume Absorption and Volume Scatter)
I tried to volume render two objects with overlapping domains on my GPU, each with a Point Density Node(in Object Vertices mode) and a Volume Shader. When looking at the scene in Object Mode with the "Rendered" Viewport setting everything is correct(bottom left), but when actually rendering the scene with GPU, one of the volumes is not visible(top left).

Screenshot GPU.png

Exact steps for others to reproduce the error

  1. Create a material with a Point Density Node and a Volume Shader, like the node setup from the screenshot above(multiply node is not important, I added it just for better visibility).

  2. Apply the material to a cube, that represents the domain of the volume rendering and place a smaller cube or any other object(even a single vertex is enough) on the inside of the domain cube

  3. In the Point Density node, set the Object reference to the inner object, to use its vertices

  4. Repeat steps 1-3 for a second object, but ensure that each inner object is contained in both domains(to end up with a scene similar to bottom right in the screenshot above) Note: when choosing Volume Absorption or Volume Scatter in step 1, always the inner domain isn't rendered properly, when choosing Emission in step 1, both domains are affected(I think issue #51791 isn't fixed for Emission yet, causing this difference)

  5. now the rendered preview works, but when actually rendering one(both) volume(s) is(are) not rendered correctly

Additional Info:
When using CPU instead, everything works as you can see here(even with Emission):
Screenshot CPU.png
I used this blender file for testing:
test.blend
At first I used Blender version 2.78 with Hash e92f235283, but there is an issue that volume rendering in general doesn't work with that version on my graphics card(see bug report #51352, the same thing applies to Volume Absorption and Emission too). This was the reason to use a daily build in the first place and this means I can't test the issue on an official released version.

**System Information** Windows 10(64 bit) AMD Radeon RX 470 4GB **Blender Version** 2.78.5 with Hash f02e04f (latest daily build) **Short description of error** Very closely related to bug report #51791 (I reported that yesterday, this issue is already resolved and works in today's build, at least for Volume Absorption and Volume Scatter) I tried to volume render two objects with overlapping domains on my GPU, each with a Point Density Node(in Object Vertices mode) and a Volume Shader. When looking at the scene in Object Mode with the "Rendered" Viewport setting everything is correct(bottom left), but when actually rendering the scene with GPU, one of the volumes is not visible(top left). ![Screenshot GPU.png](https://archive.blender.org/developer/F630392/Screenshot_GPU.png) **Exact steps for others to reproduce the error** 1. Create a material with a Point Density Node and a Volume Shader, like the node setup from the screenshot above(multiply node is not important, I added it just for better visibility). 2. Apply the material to a cube, that represents the domain of the volume rendering and place a smaller cube or any other object(even a single vertex is enough) on the inside of the domain cube 3. In the Point Density node, set the Object reference to the inner object, to use its vertices 4. Repeat steps 1-3 for a second object, but ensure that each inner object is contained in both domains(to end up with a scene similar to bottom right in the screenshot above) ***Note:*** when choosing Volume Absorption or Volume Scatter in step 1, always the inner domain isn't rendered properly, when choosing Emission in step 1, both domains are affected(I think issue #51791 isn't fixed for Emission yet, causing this difference) 5. now the rendered preview works, but when actually rendering one(both) volume(s) is(are) not rendered correctly **Additional Info:** When using CPU instead, everything works as you can see here(even with Emission): ![Screenshot CPU.png](https://archive.blender.org/developer/F630416/Screenshot_CPU.png) I used this blender file for testing: [test.blend](https://archive.blender.org/developer/F630420/test.blend) At first I used Blender version 2.78 with Hash e92f235283, but there is an issue that volume rendering in general doesn't work with that version on my graphics card(see bug report #51352, the same thing applies to Volume Absorption and Emission too). This was the reason to use a daily build in the first place and this means I can't test the issue on an official released version.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @GeorgKohl

Added subscriber: @GeorgKohl

Added subscribers: @nirved-1, @mont29

Added subscribers: @nirved-1, @mont29

@nirved-1 care to check that one too?

@nirved-1 care to check that one too?

This issue was referenced by blender/cycles@b8f442f894

This issue was referenced by blender/cycles@b8f442f89472381eac10af4529c4d21b340053c9

This issue was referenced by blender/cycles@2b3ac207e9

This issue was referenced by blender/cycles@2b3ac207e926a0dad45c160bdbb94dc3d29b9488

This issue was referenced by 5c60721c9e

This issue was referenced by 5c60721c9e3d5af2bd4f80b3013fe0c804cf7531

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51805
No description provided.